2005-03-03  Richard Hult  <richard@imendio.com>

	* Release 0.12.94.

	* configure.in: Bump to 0.12.94.

	* src/planner-task-tree.c: (task_cmd_move),
	(planner_task_tree_remove_task), (planner_task_tree_unlink_task),
	(planner_task_tree_link_tasks), (planner_task_tree_indent_task),
	(planner_task_tree_unindent_task),
	(planner_task_tree_move_task_up),
	(planner_task_tree_move_task_down),
	(planner_task_tree_reset_constraint),
	(planner_task_tree_reset_all_constraints): Use transactions for
	all task commands. Fixes bug #144732.

2005-03-03  Richard Hult  <richard@imendio.com>

	* src/planner-cmd-manager.c: (transaction_cmd_do),
	(transaction_cmd_undo), (planner_cmd_manager_begin_transaction),
	(planner_cmd_manager_end_transaction):
	* src/planner-task-cmd.c:
	* src/planner-task-tree.c: (planner_task_tree_remove_task): Finish
	the implementation of undo transactions and use them for deleting
	many tasks. Also apply patch from fmoraes@nc.rr.com.

2005-03-02  Richard Hult  <richard@imendio.com>

	* src/planner-window.c (window_redo_state_changed_cb)
	(window_undo_state_changed_cb): Don't set the full uno/redo label
	on the toolbar buttons.

2005-02-27 Alvaro del Castillo  <acs@barrapunto.com>

	* libplanner/mrp-sql.c:
	* src/planner-sql-plugin.c:
	Connect to the Postgres SQL host given by the user.
	Changes done in airplane returing from FOSDEM 2005 :)
	
2005-02-25  Richard Hult  <richard@imendio.com>

	* src/planner-html-plugin.c (html_plugin_ok_button_clicked):
	(show_url): Hack to display the result in the browser if asked to.

	* data/stylesheets/html1_css.xsl:
	* data/stylesheets/html1_gantt.xsl:
	* data/stylesheets/html1_resources.xsl:
	* data/stylesheets/html1_tasks.xsl: Clean up, indent, tweak the
	style to make it look less cluttered. Also apply patch from David
	Sundstrom <public@peapod.net> to add a percent complete column to
	the task list.

2005-02-24  Richard Hult  <richard@imendio.com>

	* Release 0.12.93.
