@@ -31,6 +31,13 @@ AM_CONDITIONAL(HAVE_NEW_MIME, test x$UPDATE_MIME_DATABASE != xno)
 AC_PATH_PROG(UPDATE_DESKTOP_DATABASE, update-desktop-database, no)
 AM_CONDITIONAL(HAVE_NEWER_MIME, test x$UPDATE_DESKTOP_DATABASE != xno)
 
+AC_ARG_ENABLE(update-mimedb,
+   AC_HELP_STRING([--disable-update-mimedb],
+                   [disable the update-mime-database after install [default=no]]),,
+    enable_update_mimedb=yes)
+AM_CONDITIONAL(ENABLE_UPDATE_MIMEDB, test x$enable_update_mimedb = xyes)
+
+
 dnl
 dnl GConf
 dnl
@@ -68,23 +75,9 @@ LIBGLADE_REQUIRED=2.4.0
 LIBGNOMEPRINTUI_REQUIRED=2.6.0
 GNOME_VFS_REQUIRED=2.6.0
 GCONF_REQUIRED=2.6.0
-
 LIBXML_REQUIRED=2.6.0
 LIBXSLT_REQUIRED=1.1.0
 PYGTK_REQUIRED=2.0.0
-
-AC_SUBST(GLIB_REQUIRED)
-AC_SUBST(GTK_REQUIRED)
-AC_SUBST(LIBGNOMECANVAS_REQUIRED)
-AC_SUBST(LIBGNOMEUI_REQUIRED)
-AC_SUBST(LIBGLADE_REQUIRED)
-AC_SUBST(LIBGNOMEPRINTUI_REQUIRED)
-AC_SUBST(GNOME_VFS_REQUIRED)
-AC_SUBST(GCONF_REQUIRED)
-
-AC_SUBST(LIBXML_REQUIRED)
-AC_SUBST(LIBXSLT_REQUIRED)
-AC_SUBST(PYGTK_REQUIRED)
 
 dnl  -----------
 dnl | Database/GDA check |----------------------------------------------
@@ -98,8 +91,6 @@ else
     use_gda=no
 fi
 
-AC_SUBST(GDA_LIBS)
-AC_SUBST(GDA_CFLAGS)
 AM_CONDITIONAL(HAVE_GDA, test x$use_gda = xyes)
 dnl -----------------------------------------------------------
 
@@ -134,9 +125,6 @@ PKG_CHECK_MODULES(LIBPLANNER,
 	gobject-2.0 gmodule-2.0
 	gnome-vfs-2.0 >= $GNOME_VFS_REQUIRED
 ])
-
-AC_SUBST(LIBPLANNER_CFLAGS)
-AC_SUBST(LIBPLANNER_LIBS)
 dnl -----------------------------------------------------------
 
 
@@ -145,8 +133,6 @@ dnl | HTML output file-module      |---------------------------
 dnl ================================
 PKG_CHECK_MODULES(XSLT, libxslt >= $LIBXSLT_REQUIRED)
 XSLT_LIBS="$XSLT_LIBS -lexslt"
-AC_SUBST(XSLT_CFLAGS)
-AC_SUBST(XSLT_LIBS)
 dnl -----------------------------------------------------------
 
 
@@ -218,29 +204,30 @@ dnl -----------------------------------------------------------
 dnl  --------------
 dnl | dotnet setup |--------------------------------------------
 dnl  --------------
-AC_ARG_ENABLE(dotnet, [  --enable-dotnet        build dotnet bindings [default=auto]], enable_dotnet="$enableval", enable_dotnet=no)
+#AC_ARG_ENABLE(dotnet, [  --enable-dotnet        build dotnet bindings [default=auto]], enable_dotnet="$enableval", enable_dotnet=no)
 
-if test "x$enable_dotnet" != "xno"; then
-    PKG_CHECK_MODULES(,gtk-sharp,have_dotnet=yes,have_dotnet=no)
+#if test "x$enable_dotnet" != "xno"; then
+#    PKG_CHECK_MODULES(,gtk-sharp,have_dotnet=yes,have_dotnet=no)
 
-    if test "x$have_dotnet" = "xyes"; then
-        AC_PATH_PROG(GAPI_FIXUP, gapi-fixup, no)
-        AC_PATH_PROG(GAPI_CODEGEN, gapi-codegen, no)
-        AC_PATH_PROG(MCS, mcs, no)
-        AC_PATH_PROG(MONO, mono, no)
-    fi
-else
-    have_dotnet=no
-fi
+#    if test "x$have_dotnet" = "xyes"; then
+#        AC_PATH_PROG(GAPI_FIXUP, gapi-fixup, no)
+#        AC_PATH_PROG(GAPI_CODEGEN, gapi-codegen, no)
+#        AC_PATH_PROG(MCS, mcs, no)
+#        AC_PATH_PROG(MONO, mono, no)
+#    fi
+#else
+#    have_dotnet=no
+#fi
 
-if test "x$enable_dotnet" = "xyes"; then
-    AC_MSG_CHECKING(for mono environment)
-    if test "x$have_dotnet" = "xno"; then
-        AC_MSG_ERROR([not found])
-    fi
-fi
+#if test "x$enable_dotnet" = "xyes"; then
+#    AC_MSG_CHECKING(for mono environment)
+#    if test "x$have_dotnet" = "xno"; then
+#        AC_MSG_ERROR([not found])
+#    fi
+#fi
+#AM_CONDITIONAL(HAVE_DOTNET, test x$have_dotnet = xyes)
+dnl -----------------------------------------------------------
 
-AM_CONDITIONAL(HAVE_DOTNET, test x$have_dotnet = xyes)
 
 dnl  -----------------------------
 dnl | Evolution Data Server check |----------------------------------------------
@@ -259,10 +246,9 @@ if test "x$enable_eds" = "xyes" ; then
 else
     use_eds=no
 fi
-
-AC_SUBST(EDS_LIBS)
-AC_SUBST(EDS_CFLAGS)
 AM_CONDITIONAL(HAVE_EDS_PLUGIN, test x$use_eds = xyes)
+dnl -----------------------------------------------------------
+
 
 dnl  -------------------------------------
 dnl | Evolution Data Server Backend check |--------------------------------------
@@ -289,17 +275,15 @@ if test "x$enable_eds_backend" = "xyes" ; then
 else
     use_eds_backend=no
 fi
-
-AC_SUBST(EDS_BACKEND_LIBS)
-AC_SUBST(EDS_BACKEND_CFLAGS)
 AM_CONDITIONAL(HAVE_EDS_BACKEND, test x$use_eds_backend = xyes)
-
 dnl -----------------------------------------------------------
+
 
 dnl This will cause the automake generated makefiles to pass the
 dnl correct flags to aclocal.
 ACLOCAL_AMFLAGS="\${ACLOCAL_FLAGS}"
 AC_SUBST(ACLOCAL_AMFLAGS)
+
 
 AC_CONFIG_FILES([
 Makefile
@@ -325,33 +309,28 @@ data/stylesheets/Makefile
 data/mime/Makefile
 data/sql/Makefile
 python/Makefile
-dotnet/Makefile
-dotnet/libplanner/Makefile
-dotnet/samples/Makefile
 eds-backend/Makefile
 eds-backend/planner-source/Makefile
 eds-backend/utils/Makefile
-planner.spec
 libplanner-1.pc
 ])
-
 
 AC_OUTPUT([
 data/planner.desktop.in
 ])
 
 echo
-echo "Planner prefix                : $prefix"
-echo "Build API docs                : $enable_gtk_doc"
-echo "Python bindings               : $have_python"
-echo "Python plugin                 : $enable_python_plugin"
-echo "Dotnet bindings               : $have_dotnet"
-echo "Database/GDA support          : $use_gda"
-echo "Evolution Data Server import  : $use_eds"
-echo "Evolution Data Server backend : $use_eds_backend"
+echo "Planner prefix               : $prefix"
+echo "Build API docs               : $enable_gtk_doc"
+echo "Python bindings              : $have_python"
+echo "Python plugin                : $enable_python_plugin"
+#echo "Dotnet bindings              : $have_dotnet"
+echo "Database/GDA support         : $use_gda"
+echo "Evolution Data Server import : $use_eds"
+echo "Evolution Data Server backend: $use_eds_backend"
 echo
 
 if test "x$enable_eds_backend" = "xyes" ; then
-	echo "*** WARNING: Evolution backend is experimental. Don't use it in production systems ***"
+	echo "*** Note: The Evolution backend is experimental. Don't use it in production systems ***"
 fi
 
